# AlveolEye

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Usage.md  environment-dev.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
AlveolEye/: meta.yaml
docs/: Usage.md
src/alveoleye/: __init__.py  _action_box.py  _boxes.py  _config_utils.py  _dataset_utils.py  _export_operations.py  _gui_creator.py  _layers_editor.py  _models.py  _reader.py  _rules.py  _rules_engine.py  _verifiers.py  _widget.py  _workers.py  config.json  dark_theme.css  light_theme.css  napari.yaml
src/alveoleye/_tests/: conftest.py  test_assessments.py  test_config_utils.py  test_lungcv.py  test_metrics.py  test_plugin.py  test_postprocessing.py  test_reader.py  test_rules.py  test_training_api.py  test_training_augmentations.py  test_training_callbacks.py  test_training_cli.py  test_training_config.py  test_training_optimizers.py  test_verifiers.py
src/alveoleye/boxes/: __init__.py  assessments_box.py  box_abstract.py  export_box.py  postprocessing_box.py  processing_box.py
src/alveoleye/data/: 1234.json  default.pth  out.csv
src/alveoleye/figure_scripts/: _combined_workers.py  _utils.py  combined_workers.py  confidence_map_figures.py  confidence_maps.py  determinism_figure.py  save_snapshots.py  trials.py  utils.py
src/alveoleye/lungcv/: assessments.py  confidence_maps.py  model_operations.py  postprocessor.py
src/alveoleye/paper_scripts/: README.md  _combined_workers.py  _utils.py  trials.py  (+6 more)
src/example_images/: classes.json
(+17 files in other folders)
