[metadata]
name = AlveolEye
version = 0.1.5
description = Reads lung slides with AI-driven and classical methods
long_description = file: README.md
long_description_content_type = text/markdown

author = Joseph Hirsh
author_email = josephhirsh9@gmail.com
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    AlveolEye = alveoleye:napari.yaml

[options.extras_require]
testing =
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    qtpy


[options.package_data]
* =
    *.yaml
    *.json
    *.css
    *.pth
